jQuery fourth,fifth 終了しました。

--- a/work/fifth/index.html
+++ b/work/fifth/index.html
@@ -84,6 +84,24 @@
     </div>
     <script src="../../common/js/jquery.js"></script>
     <script>
+      $(function() {
+        $('.select').change(function() {
+          var typeVlue = $(this).val();
+          if(typeVlue == 'all') {
+            $('.list li').each(function() {
+              $(this).show();
+            });
+          } else {
+            $('.list li').each(function() {
+              if($(this).data('category-type') == typeVlue ){
+                $(this).show();
+              } else {
+                $(this).hide();
+              }
+            });
+          }
+        });
+      });
       // 今回やるのはソート機能です。
       // selectボックスをクリックして言語を選び、その言語と関係のあるリストだけが表示されるプログラムです。
       // [処理の流れ]
