--- a/work/sixth/index.html
+++ b/work/sixth/index.html
@@ -21,6 +21,17 @@
     </div>
     <script src="../../common/js/jquery.js"></script>
     <script>
+      $(function() {
+        var maxCount = $('.rest-count').text();
+        $('.input').keyup(function() {
+          var text = $(this).val();
+          var restCount = maxCount - text.replace(/\s+/g,'').length;;
+          $('.rest-count').text(restCount);
+          if(restCount < 0) {
+            $('.rest-count').css('color', 'red');
+          }
+        });
+      });
       // 今回やるのは文字数チェッカーです。
       // .input に文字を入力し、文字を入力した段階でその文字数に応じて .rest-count の値が減っていき、最大文字数である30文字以上入力すると .rest-count に .red クラスが追加されて文字色が赤くなり、30文字以内になると、.red クラスが外れ、文字色が元に戻る。（ちなみに改行は文字数に含まない。）
       // .keyup() 文字入力後に発火されるイベントです。
