--- a/work/first/answer/index.html
+++ b/work/first/answer/index.html
@@ -85,10 +85,9 @@
         // <div class="btn" id="q2">q2</div>をクリックした後に背景色が変わるはず。
         // .click();　clickメソッドは()の中に関数を書くと指定した要素をクリックした後にその関数を実行するという処理をやってくれる。関数とは何だという方はjavascript-lessonの前の項にもどりましょう。
         // $(this)　これは超簡単に書くと、この記述の前に指定されたDOMを指定する。この場合クリックした要素である$('#q2')のこと。
-        $('#q3').click(fadeOut);
-        function fadeOut() {
+        $('#q3').click(function() {
           $(this).fadeOut(2000);
-        }
+        });
         // <div id='q3'>q3</div>をクリックした後に自身がフェードアウトする。
         // function 関数名() { }　これが関数の雛形。「fadeOut」のような名前をつけて、その名前を呼び出す。（適当な名前じゃダメです）
         // 別にこんな簡単な処理を関数化する必要はないじゃん！って思う人もいると思うけど、何回も同じ記述をする場合に面倒になるので、関数化するのは非常に重要になる。
