jquery tenth終了しました。

--- a/work/tenth/index.html
+++ b/work/tenth/index.html
@@ -29,81 +29,117 @@
     <script src="./js/appid.js"></script>
     <script>
       $(function() {
-        var page = 1;
-        $('.search__btn').on('click',function searchBooks() {
-          var searchWord = $('.search__text__input').val();
+        var page = '';
+        var pageCount = 0;
+        var searchWord ='';
+        $('.search__btn').on('click',function(e) {
+          e.preventDefault();
+          $('.message').empty();
+          searchWord = $('.search__text__input').val();
+          page = 1;
+          searchBooks();
+        });
+        function searchBooks() {
           $('.lists__item').hide();
           $('.pager').hide();
           console.log(searchWord);
           $.ajax({
-            url: encodeURI('https://app.rakuten.co.jp/services/api/BooksTotal/Search/20170404?'),
+            url: encodeURI('https://app.rakuten.co.jp/services/api/BooksTotal/Search/20130522'),
             type: 'GET',
             dataType: 'json',
             data: {
               applicationId: appId,
               booksGenreId: '001',
-              size: '0',
-              formatVersion: '2',
               keyword: searchWord,
               hits: '20',
               page: page,
-              outOfStockFlag: '0',
-              chirayomiFlag: '0',
-              sort: 'standard',
-              limitedFlag: '0',
             }
           }).done(function(data) {
-            console.log(data);
-            $.each(data.Items, function(index, val){
-              $('.lists').append(
-                "<li class='lists__item'>" + 
-                  "<div class='lists__item__inner'>" +
-                    "<a href='" + val.itemUrl + "' class='lists__item__link' target='_blank'>" +
-                      "<img src='" + val.largeImageUrl +"' class='lists__item__img' alt=''>" +
-                      "<p class='lists__item__detail'>作品名：" + val.title + "</p>" +
-                      "<p class='lists__item__detail'>作者　：" + val.author + "</p>" +
-                      "<p class='lists__item__detail'>出版社：" + val.publisherName + "</p>" +
-                    "</a>" +
-                  "</div>" +
-                "</li>"
-              );
-            });
-            $('.container').append(
-              '<div class="pager" data-js="pager">' +
-                '<div class="counter">' +
-                  '<span class="counter-current">' + data.page + '</span>/<span class="counter-all">' + data.pageCount + '</span>' +
-                '</div>' +
-                '<div class="btn-wrapper">' +
-                  '<a class="btn-item" data-js="page-prev" href="#">前へ</a>' +
-                  '<a class="btn-item" data-js="page-next" href="#">次へ</a>' +
-                '</div>' +
-              '</div>'
-            );
-            var pageCount = data.pageCount;
-            $('.btn-item').on('click', function pager(e) {
-              e.preventDefault();
-              console.log(page);
-              if($('.btn-item').data('js') == "page-prev") {
-                pagePrev(page, pageCount);
-              } else if ($('.btn-item').data('js') == "page-next") {
-                pageNext(page, pageCount);
-              }
-              function pagePrev(page, pageCount) {
-                if (page > 1) {
-                  page -= 1;
-                  searchBooks();
-                }
-              }
-              function pageNext(page, pageCount) {
-                if(page < pageCount) {
-                  page += 1;
-                  searchBooks();
-                  
-                }
-              }
-            });
+            doneFunc(data);
+          }).fail(function(error) {
+            failFunc(error);
           });
+          function doneFunc(data) {
+            pageCount = data.pageCount;
+            console.log(data);
+            if (data.count > 1) {
+              var temp = '';
+              $.each(data.Items, function(index, val){
+                temp +=
+                  "<li class='lists__item'>" + 
+                    "<div class='lists__item__inner'>" +
+                      "<a href='" + val.Item.itemUrl + "' class='lists__item__link' target='_blank'>" +
+                        "<img src='" + val.Item.largeImageUrl +"' class='lists__item__img' alt=''>" +
+                        "<p class='lists__item__detail'>作品名：" + val.Item.title + "</p>" +
+                        "<p class='lists__item__detail'>作者　：" + val.Item.author + "</p>" +
+                        "<p class='lists__item__detail'>出版社：" + val.Item.publisherName + "</p>" +
+                      "</a>" +
+                    "</div>" +
+                  "</li>";
+              });
+              $('.lists').append(temp);
+              $('.container').append(
+                '<div class="pager" data-js="pager">' +
+                  '<div class="counter">' +
+                    '<span class="counter-current">' + page + '</span>/<span class="counter-all">' + pageCount + '</span>' +
+                  '</div>' +
+                  '<div class="btn-wrapper">' +
+                    '<a class="btn-item" data-js="page-prev" href="#">前へ</a>' +
+                    '<a class="btn-item" data-js="page-next" href="#">次へ</a>' +
+                  '</div>' +
+                '</div>'
+              );
+              if (page === 1 && page === pageCount) {
+                $('.btn-item').addClass('disabled');
+              } else if (page === 1) {
+                $('.btn-item:first-child').addClass('disabled');
+              } else if (page === pageCount) {
+                $('.btn-item:last-child').addClass('disabled');
+              }
+            } else {
+              $('.message').append('検索結果が見つかりませんでした。' + '<br>' + '別のキーワードで検索して下さい。');
+            }
+          }
+          function failFunc(error) {
+            switch(error.status) {
+              case 0:
+                $('.message').text('通信に失敗しました。インターネットの接続をご確認ください。');
+              break;
+              case 400:
+                $('.message').text('検索文字が入力されていません。');
+              break;
+              case 404:
+                $('.message').text('対象のデータが存在しません。');
+              break;
+              case 429:
+                $('.message').text('リクエスト過多です。しばらく時間を置いてからお試しください。');
+              break;
+              case 500:
+                $('.message').text('システムエラー。長時間続くようであれば、' + '<a href = "https://webservice.faq.rakuten.net/hc/ja/requests/new">こちらよりごお問い合わせください。</a>');
+              break;
+              case 503:
+                $('.message').text('メンテナンス中です。しばらくお待ちください。');
+              break;
+            }
+          };
+        };
+        $(document).on('click', '.btn-item', function(e) {
+          pageFunc(e);
         });
+        function pageFunc(e) {
+          e.preventDefault();
+          if(e.target.dataset.js === "page-prev") {
+            if (page > 1) {
+              page -= 1;
+              searchBooks();
+            };
+          } else if (e.target.dataset.js === "page-next") {
+            if (page < pageCount) {
+              page += 1;
+              searchBooks();
+            };
+          };
+        };
       });
       // 楽天ブックスの総合検索APIを使って製作してください。
       // answerの挙動を良く見てね！
