jquery tenth 修正を加えました。

--- a/work/tenth/index.html
+++ b/work/tenth/index.html
@@ -44,7 +44,7 @@
           $('.pager').hide();
           console.log(searchWord);
           $.ajax({
-            url: encodeURI('https://app.rakuten.co.jp/services/api/BooksTotal/Search/20130522'),
+            url: 'https://app.rakuten.co.jp/services/api/BooksTotal/Search/20130522',
             type: 'GET',
             dataType: 'json',
             data: {
